# C-Compiler

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
Grammars/: File.g4
Presentation/: Features.md
antlr4_output/: FileLexer.py  FileListener.py  FileParser.py  FileVisitor.py
src/: Dot.py  LLVM.py  MIPS.py  Parameter.py  ast.py  ast_creator.py  dot.py  llvm.py  mips.py  node.py  parameter.py  register_management.py  run.py  symbol_entry.py  symbol_table.py
tests/e2e/input_files/correct_code/binary_operations/: binaryOperations1.c  binaryOperations2.c
tests/e2e/input_files/correct_code/comparisons/: comparisons2.c
tests/e2e/test_run/: test_compilation.py  test_execution.py
